...
                    modifier = Modifier.weight(1f),
                    textAlign = androidx.compose.ui.text.style.TextAlign.Center
                )
                IconButton(onClick ={ expanded = true }) {
                    Icon(
                        imageVector = Icons.Default.MoreVert,
                        contentDescription = "Más",
                        tint = MaterialTheme.colorScheme.onPrimary
                    )
                    DropdownMenu(
                        expanded = expanded,
                        onDismissRequest = { expanded = false },
                        containerColor = MaterialTheme.colorScheme.surface
                    ) {
                        DropdownMenuItem(
                            text = {
                                Text(
                                    "Editar vehículo",
                                    color = MaterialTheme.colorScheme.onSurface
                                )
                            },
                            onClick = {
                                expanded = false
                                navController.navigate("editar_vehiculo/${vehiculo.id}/$efectiveUserId/$efectiveToken")
                            }
                        )
                        DropdownMenuItem(
                            text = {
                                Text(
                                    "Eliminar vehículo",
                                    color = MaterialTheme.colorScheme.onSurface
                                )
                            },
                            onClick = {
                                expanded = false
                                viewModel.eliminarVehiculo(efectiveToken ?: "", vehiculo.id.toString())
...
